k8s/apps/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy
        # securityContext:
        #   readOnlyRootFilesystem: true
        image: lissy93/dashy:3.1.0 # {"$imagepolicy": "dashy:dashy"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits: {}
          requests:
            memory: 180Mi
        volumeMounts:
        - name: dashy
          mountPath: /app/user-data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: dashy
        persistentVolumeClaim:
          claimName: dashy
      - name: tmp
        emptyDir: {}
      priorityClassName: low
