k8s/apps/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  labels:
    app: dashy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: dashy
  type: ClusterIP
